<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_dark">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/register_title"
        android:textColor="@color/gray_light"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tiEmail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:width="350dp"
        android:text="@string/login_description"
        android:textColor="@color/gray"
        android:textSize="26dp"
        app:layout_constraintStart_toStartOf="@+id/register_title"
        app:layout_constraintTop_toBottomOf="@+id/register_title" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iconProfile"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tiName"
        app:layout_constraintStart_toStartOf="@+id/tiName"
        app:layout_constraintTop_toBottomOf="@+id/register_description"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_baseline_photo_camera_24"
        android:contentDescription="@string/adicionar_foto_de_perfil"
        app:layout_constraintBottom_toBottomOf="@+id/iconProfile"
        app:layout_constraintEnd_toEndOf="@+id/iconProfile"
        app:tint="@color/gray" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/login_hint_name"
        android:textColorHint="@color/white"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconProfile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/background_edit_text"
            android:paddingHorizontal="20dp"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/login_hint_username"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingHorizontal="20dp"
            android:background="@drawable/background_edit_text"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/login_hint_password"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:hintAnimationEnabled="true"
        app:boxStrokeErrorColor="@color/gray_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiEmail">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingHorizontal="20dp"
            android:background="@drawable/background_edit_text"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_button"
        android:text="@string/btn_register"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>